# docs/swagger.yaml
@@ -1,5 +1,12 @@
 basePath: /api
 definitions:
+  request.NovelGenerateRequest:
+    properties:
+      content:
+        type: string
+    required:
+    - content
+    type: object
   request.PostCreateRequest:
     properties:
       content:
@@ -55,6 +62,13 @@ definitions:
     - title
     - updatedAt
     - userId
+    type: object
+  response.NovelGenerateResponse:
+    properties:
+      novel:
+        type: string
+    required:
+    - novel
     type: object
   response.PostCreateResponse:
     properties:
@@ -134,6 +148,28 @@ paths:
       summary: GetLatest
       tags:
       - discover
+  /novels/generate:
+    post:
+      description: 小説を生成する
+      parameters:
+      - description: 小説生成リクエスト
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.NovelGenerateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.NovelGenerateResponse'
+      security:
+      - BearerAuth: []
+      summary: GenerateNovel
+      tags:
+      - novel
   /posts:
     post:
       description: 投稿を新規作成する
