# internal/app/handler/response/novel.go
@@ -1,0 +1,5 @@
+package response
+
+type NovelGenerateResponse struct {
+	Novel string `json:"novel" validate:"required"`
+}
